--- a/Course4/workshop/workshop/bin/workshop.dll.config
+++ b/Course4/workshop/workshop/bin/workshop.dll.config
@@ -4,6 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  
+  <connectionStrings>
+    <add name="GSSWEB" connectionString="Data Source=DESKTOP-0B3V7K4\SQLEXPRESS_TEST;Initial Catalog=GSSWEB;Integrated Security=False;User ID=sa;Password=123;Connect Timeout=15;TrustServerCertificate=False" />
+  </connectionStrings>
+  
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
