--- a/Course4/workshop/workshop/workshop.csproj
+++ b/Course4/workshop/workshop/workshop.csproj
@@ -163,6 +163,7 @@
     <Content Include="Views\Default\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
+    <Content Include="Views\Default\InsertBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
