--- a/Course4/workshop/workshop/workshop.csproj
+++ b/Course4/workshop/workshop/workshop.csproj
@@ -160,10 +160,10 @@
       <DependentUpon>Web.config</DependentUpon>
     </Content>
     <Content Include="Views\Web.config" />
-    <Content Include="Views\Default\Index.cshtml" />
+    <Content Include="Views\Library\Index.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\_ViewStart.cshtml" />
-    <Content Include="Views\Default\InsertBook.cshtml" />
+    <Content Include="Views\Library\InsertBook.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
