--- a/Course5 Front_End Advanced/MVC/BookManagement/Web.config
+++ b/Course5 Front_End Advanced/MVC/BookManagement/Web.config
@@ -6,7 +6,7 @@
 <configuration>
   
   <connectionStrings>
-    <add name="DBConn" connectionString="Data Source=localhost ; Initial Catalog=GSSWEB; User ID=sa; Password=123 ;Connect Timeout=15;TrustServerCertificate=False" />
+    <add name="DBConn" connectionString="Data Source=DESKTOP-0B3V7K4\SQLEXPRESS_TEST ; Initial Catalog=GSSWEB; User ID=sa; Password=123 ;Connect Timeout=15;TrustServerCertificate=False" />
   </connectionStrings>
     
     
