--- a/Course5 Front_End Advanced/MVC/BookManagement/BookManagement.csproj
+++ b/Course5 Front_End Advanced/MVC/BookManagement/BookManagement.csproj
@@ -131,6 +131,7 @@
     <Content Include="Views\Book\UpdateBook.cshtml" />
     <Content Include="Views\Book\BookLendRecord.cshtml" />
     <Content Include="Views\Library\Index.cshtml" />
+    <Content Include="Views\Library\InsertBook.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
